@@ -1,14 +1,13 @@
 # Project-1.2  
     Navigate to src\main\java
     
-## For java 1.8 and older:
-### Compile with:
-    javac titan\gui\GuiMain.java
-### Run with:
-    java titan.gui.GuiMain
-    
-## For java newer than 1.8:  
-### Compile with: 
-    javac --module-path ..\..\..\javafx-sdk-11.0.2\lib --add-modules javafx.controls titan\gui\GuiMain.java  
-### Run with: 
-    java --module-path ..\..\..\javafx-sdk-11.0.2\lib --add-modules javafx.controls titan.gui.GuiMain
+## Gradle
+#### Run from terminal
+    gradle run
+  
+#### Run from intellij
+    -Edit run configurations
+    -Add new gradle configuration
+    -Add gradle project
+    -Add task run
+   
